# kwin-effect-hide-cursor

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  hidecursor.cpp  hidecursor.h  main.cpp  metadata.json
src/kcm/: CMakeLists.txt  hidecursor_config.cpp  hidecursor_config.h  hidecursor_config.ui
